<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:id="@+id/TelemetryInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Bürküt"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/DroneLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_latitude"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneLatitude"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_longitude"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneLongitude"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/DroneAltitudes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_msl"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneMSL"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_agl"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneAGL"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/HomeLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/home_latitude"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_homeLatitude"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/home_longitude"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_homeLongitude"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/HomeAltitudes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/home_msl"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_homeMSL"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/DroneVelocity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_horizontal_velocity"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneHorizontalVelocity"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_vertical_velocity"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_droneVerticalVelocity"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/DroneInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/drone_heading"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_droneHeading"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />


            <ImageView
                android:id="@+id/iv_GPSFixed"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:src="@drawable/gps_fixed" />

            <TextView
                android:id="@+id/tv_droneGPS"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/white" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/additional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BatteriesInfo"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fr_map"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:translationZ="1dp"
            android:visibility="visible">

            <org.osmdroid.views.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_CenterAndTrack"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/green"
                android:contentDescription="@string/gps_marker"
                android:src="@drawable/gps_fixed" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:background="@color/white" />

            <ImageButton
                android:id="@+id/btn_NotCenterAndTrack"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/red"
                android:contentDescription="@string/gps_marker"
                android:src="@drawable/gps_fixed" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOpenDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Open Dialog" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cr_batteryWarning"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:translationZ="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BatteriesInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TelemetryInfo"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/DroneBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_battery"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:src="@drawable/battery_unknown" />

            <TextView
                android:id="@+id/tv_batteryVoltage"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />

            <TextView
                android:id="@+id/tv_batteryPercent"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DeviceBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
